cluster/infra/kube-system/cilium-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  labels:
    gateway: main
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.0.150
    - type: IPAddress
      value: ::ffff:192.168.0.150
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.${DOMAIN_NAME}'
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.${DOMAIN_NAME}'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-main-tls
